Fix find & replace on mobile

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1597,8 +1597,8 @@ body.is-mobile {
 }
 
 body.is-phone {
-  div:not(.markdown-embed-content) > .markdown-preview-view:first-child,
-  div:not(.markdown-embed-content) > .cm-sizer:first-child {
+  div:not(.markdown-embed-content) > .markdown-reading-view > div:first-child,
+  div:not(.markdown-embed-content) > .markdown-source-view > div:first-child {
     padding-top: calc(var(--safe-area-inset-top) + var(--view-header-height) + 16px);
   }
 
@@ -1608,13 +1608,13 @@ body.is-phone {
 }
 
 body.is-tablet {
-  .workspace-tabs.mod-top div:not(.markdown-embed-content) > .markdown-preview-view:first-child,
-  .workspace-tabs.mod-top div:not(.markdown-embed-content) > .cm-sizer:first-child {
+  .workspace-tabs.mod-top div:not(.markdown-embed-content) > .markdown-reading-view > div:first-child,
+  .workspace-tabs.mod-top div:not(.markdown-embed-content) > .markdown-source-view > div:first-child {
     padding-top: calc(var(--safe-area-inset-top) + var(--header-height) + var(--view-header-height) + 16px);
   }
 
-  .workspace-tabs:not(.mod-top) div:not(.markdown-embed-content) > .markdown-preview-view:first-child,
-  .workspace-tabs:not(.mod-top) div:not(.markdown-embed-content) > .cm-sizer:first-child {
+  .workspace-tabs:not(.mod-top) div:not(.markdown-embed-content) > .markdown-reading-view > div:first-child,
+  .workspace-tabs:not(.mod-top) div:not(.markdown-embed-content) > .markdown-source-view > div:first-child {
     padding-top: calc(var(--header-height) + var(--view-header-height) + 16px);
   }
 
@@ -1632,6 +1632,27 @@ body.is-tablet {
     button {
       height: 100%;
     }
+  }
+
+  .document-search-container {
+    bottom: 0;
+    background-color: transparent;
+    border: none;
+    position: fixed;
+    width: 100%;
+  }
+  .document-search-container::before {
+    z-index: -2 !important;
+    backdrop-filter: blur(16px) saturate(1.5);
+  }
+  .document-search-container::before,
+  .document-search-container::after {
+    position: absolute;
+    z-index: -1;
+    mask: linear-gradient(to bottom, hsla(0, 0%, 0%, 0) 0%, hsla(0, 0%, 0%, 0.013) 4.7%, hsla(0, 0%, 0%, 0.049) 8.9%, hsla(0, 0%, 0%, 0.104) 12.8%, hsla(0, 0%, 0%, 0.175) 16.6%, hsla(0, 0%, 0%, 0.259) 20.4%, hsla(0, 0%, 0%, 0.352) 24.4%, hsla(0, 0%, 0%, 0.45) 28.8%, hsla(0, 0%, 0%, 0.55) 33.8%, hsla(0, 0%, 0%, 0.648) 39.6%, hsla(0, 0%, 0%, 0.741) 46.3%, hsla(0, 0%, 0%, 0.825) 54.1%, hsla(0, 0%, 0%, 0.896) 63.2%, hsla(0, 0%, 0%, 0.951) 73.8%, hsla(0, 0%, 0%, 0.987) 86%, hsl(0, 0%, 0%) 100%);
+    inset: -16px 0 0;
+    pointer-events: none;
+    content: "";
   }
 }
 
